# visual-quality-inspection

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
src/api/: main.py  schemas.py
src/data_generation/: generate_images.py
src/features/: build_dataset.py  extract_features.py  localization.py
src/models/: train.py
tests/: conftest.py  test_api.py  test_extract_features.py  test_generate_images.py  test_localization.py
